--- a/views/so_article.html
+++ b/views/so_article.html
@@ -67,7 +67,76 @@
         background-color: #C13232;
     }
     .result-item{
-
+        padding: 17px 0 13px;
+        border-bottom: 1px dashed #DCDCDC;
+    }
+    .result-item .item-adviser{
+        width: 172px;
+        float: left;
+    }
+    .result-item .item-adviser .adviser-avatar {
+        width: 50px;
+        height: 50px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        margin-right: 20px;
+        line-height: 50px;
+        font-size: 14px;
+        color: #333;
+    }
+    .result-item .item-adviser .flag{
+        margin-left: 4px;
+        margin-top: -3px;
+    }
+    .result-item .item-info{
+        width: 668px;
+        float:right;
+    }
+    .result-item .item-info .info-top {
+        height: 20px;
+        line-height: 20px;
+    }
+    .result-item .item-info .info-top a{
+        float: left;
+        margin-right: 10px;
+        font-size: 16px;
+        color: #333;
+    }
+    .result-item .item-info .info-top .info-tags{
+        float: left;
+    }
+    .result-item .item-info .info-top .info-tags span {
+        display: inline-block;
+        height: 20px;
+        padding: 0 10px;
+        background-color: #ff8547;
+        color: #fff;
+        text-align: center;
+        line-height: 20px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px;
+        font-size: 12px;
+    }
+    .result-item .item-info{
+        position: relative;
+    }
+    .result-item .item-info .info-desc {
+        font-size: 12px;
+        color: #333;
+        line-height: 24px;
+        text-align: justify;
+    }
+    .result-item .item-info .info-desc a{
+        color: #C13232;
+        cursor: pointer;
+    }
+    .result-item .item-info .time{
+        position: absolute;
+        right: 0;
+        bottom: 2px;
+        font-size: 12px;
     }
 </style>
 <body style="background: #f5f5f5">
@@ -97,12 +166,20 @@
                 <a href="">最热hot</a>
             </div>
             <div class="result-conent">
-                <div class="result-item">
+                <div class="result-item clearfix">
                     <div class="item-adviser">
-                        <img src="" alt=""/>
-                        <span>张珂</span>
+                        <img src="../assets/img/profile3.jpg" alt="" class="adviser-avatar"/><span>张珂</span><img src="../assets/img/1v.png" alt="" class="flag"/>
                     </div>
-                    <div class="item-info"></div>
+                    <div class="item-info">
+                        <div class="info-top clearfix">
+                            <a class="info-title" href="">美国研究生双录取（汉语授课）申请方案</a>
+                            <div class="info-tags">
+                                <span>留学时讯</span>
+                            </div>
+                        </div>
+                        <div class="info-desc">邵东富ID见覅圣诞节基地的积分等级绝地反击的减肥死的积分是的奇偶的及时交付is登记的交付的司法电视剧邵东富ID见覅圣诞节基地的积分等级绝地反击的减肥死的积分是的奇偶的及时交付is登记的交付的司法电视剧<a>【查看详情】</a></div>
+                        <div class="time">今天13:19</div>
+                    </div>
                 </div>
             </div>
         </div>
