--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -79,7 +79,7 @@
         {% import "widget2/article/article.html" as article_show %}
         {{ article_show.article_show(item, helper) }}
 
-        {% include "widget2/bottom_comment/bottom_comment.html" %}
+        {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
         {% endfor %}
       </div>
       <div class="loadMore" data-page="1" data-uid="{{userinfo.uid}}" style="height: 54px;line-height: 54px">
@@ -109,6 +109,7 @@
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
 <script>
   $(function(){
     window._bd_share_config = {
