--- a/views/widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html
+++ b/views/widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html
@@ -3,11 +3,11 @@
   <ul class="clearfix">
     <li onclick="showbottom(1, {{item.id}}, {{userinfo.usertype}})" id="yuedu_li_{{item.id}}" style="cursor: inherit;">
       <i class="iconfont " id="yuedu_{{item.id}}">&#xe9ca;</i>
-      <span id="yuedu_span_{{item.id}}">阅读（<em id="yuedu_em_{{item.id}}">{{item.views}}</em>）</span>
+      <span id="yuedu_span_{{item.id}}">阅读<em id="yuedu_em_{{item.id}}">{{item.views}}</em></span>
     </li>
     <li onclick="showbottom(2, {{item.id}}, {{userinfo.usertype}})" id="shoucang_li_{{item.id}}">
       <i class="iconfont " id="shoucang_{{item.id}}">&#xe7ed;</i>
-      <span id="shoucang_span_{{item.id}}">收藏（<em id="shoucang_em_{{item.id}}">{{item.favorites}}</em>）</span>
+      <span id="shoucang_span_{{item.id}}">收藏<em id="shoucang_em_{{item.id}}">{{item.favorites}}</em></span>
     </li>
     {% if item.type == 2 %}
     <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
@@ -26,7 +26,7 @@
     {% endif %}
     <li class="dian" onclick="showbottom(4, {{item.id}}, {{userinfo.usertype}})" id="dianzan_li_{{item.id}}">
       <i class="iconfont " id="dianzan_{{item.id}}">&#xe651;</i>
-      <span id="dianzan_span_{{item.id}}">点赞（<em id="dianzan_em_{{item.id}}">{{item.votes}}</em>）</span>
+      <span id="dianzan_span_{{item.id}}">点赞<em id="dianzan_em_{{item.id}}">{{item.votes}}</em></span>
     </li>
   </ul>
 </div>
