--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -18,10 +18,11 @@
 .gw-people span{color:#333;font-size:14px;margin-top: 15px;display: inline-block;margin-left: 10px;}
 .gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background:url(../assets/img/1v.png) no-repeat;background-position:right center}
 .gw-items p{color:#333;font-size:16px;padding-top: 10px;text-indent: 20px;}
-.gw-legend{float:right;margin-top:18px;background:#f9f6f1;color:#c13232;font-size:12px}
+.gw-legend{float:right;margin-top:18px;padding:2px 8px;-webkit-border-radius:8px;border-radius:8px;background:#f9f6f1;color:#c13232;font-size:12px}
 .gw-news{width:76px;height:20px;-webkit-border-radius:10px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
 .gw-people .bg-peopel{float:left;height: 51px; 
 	width: 51px;border-radius: 50%;-webkit-border-radius:50%;}
+
 </style>
 {% for floor in shouye %} {#国家#}
 <div class="lxContaniner" style="overflow:hidden" data-id="country{{floor.country_id}}">
