--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -1,13 +1,14 @@
 <!--右侧在线咨询-->
 
-{% macro leyu_slide(path,user) %}
+{% macro leyu_slide(path,user,login_info) %}
 <div class="mui-mbar-tabs" style="z-index:999">
   <div class="quick_links_wrap quick_links_dockright">
     <div class="quick_link_mian">
 
       <div class="quick_links_panel">
         <ul>
-          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;"  onclick="openchat_new('{{ user.job_number}}')">
+
+          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;"  {% if user.uid !== login_info.uid %} onclick="openchat_new('{{ user.job_number}}')" {% endif %}>
 
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img">
             <span>立即咨询</span>
