--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -64,7 +64,7 @@
 {% macro adviser_show(item,helper) %}
 <div class="art-box clearfix" >
   <a target="_blank" href="{{helper.urlgen(item.uid|string)}}">
-    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 60px 76px;"></div>
+    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 50px 50px;"></div>
   </a>
   <div class="adviser-info" >
      <div class="adviser-info-name" style="font-size: 14px">
@@ -82,22 +82,14 @@
        <a target="_blank" href="{{helper.urlgen('article',item.id | string)}}"  style="color: #C13232">
          {{item.title}}</a>
        {% endif %}
-      {# <a target="_blank" href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}" style="color: #C13232">{{item.title}}</a>#}
-     </div>
-     <div class="offer-xialas">
-        <span class="offer-xialadd iconfont">&#xe60b;</span>
-        <ul class="offer-xiala">
-          <li><a target="_blank" class="dui-text-warning-s report-btn" data-artId="{{item.id}}" data-catid="{{item.category_id}}">举报</a></li>
-          <li><a target="_blank" class="dui-text-warning-s share-btn" data-url="{{helper.articleUrlgen(item.uid|string,'article='+item.id | string)}}" data-title ="{{item.title}}">分享</a></li>
-        </ul>
      </div>
      <p class="adviser-info-p">
        {% if item.type == 1 %}
-       <a target="_blank" href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}" class="dui-text-warning" rel="nofollow">
+       <a target="_blank" href="{{helper.urlgen('case',item.id | string)}}" class="dui-text-warning" rel="nofollow">
          {{item.introduce}} <span>【查看详情】</span>
        </a>
        {%else%}
-       <a target="_blank" href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}" class="dui-text-warning" rel="nofollow">
+       <a target="_blank" href="{{helper.urlgen('article',item.id | string)}}" class="dui-text-warning" rel="nofollow">
          {{item.introduce}} <span>【查看详情】</span>
        </a>
        {% endif%}
@@ -208,7 +200,15 @@
       <span style="padding: 0 10px;height: 24px;float: left;margin-left: 20px;background: url('{{helper.cdnhost}}/assets/img/yanse.png');background-size:cover ;border-radius:12px ;margin-top: -3px;text-align: center;line-height: 24px;color: #C13232;">{{item.tag_list}}</span>
     </div>
     <div class="adviser-info-title">
-      <a target="_blank" href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}" style="color: #C13232">{{item.title}}</a>
+      {% if item.type == 1 %}
+        <a target="_blank" href="{{helper.urlgen('case',item.id | string)}}" style="color: #C13232">
+         {{item.title}}
+       </a>
+      {% else %}
+        <a target="_blank" href="{{helper.urlgen('article',item.id | string)}}"  style="color: #C13232">
+         {{item.title}}
+        </a>
+      {% endif %}
     </div>
     <div class="offer-opt-bar clearfix">
       <div class="opt-btn delete" onclick="cancelFav($(this), {{item.id}})">
@@ -216,19 +216,16 @@
         <span>删除</span>
       </div>
     </div>
-    <div class="offer-xialas">
-      <span class="offer-xialadd iconfont">&#xe60b;</span>
-      <ul class="offer-xiala">
-        <li>
-          <a target="_blank" class="dui-text-warning-s report-btn" data-artId="{{item.id}}" data-catid="{{item.category_id}}">举报</a>
-          </li>
-        <li><a target="_blank" class="dui-text-warning-s share-btn" data-url="{{helper.urlgen('article',item.id | string)}}" data-title ="{{item.title}}">分享</a></li>
-      </ul>
-    </div>
     <p class="adviser-info-p">
-      <a target="_blank" href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}" class="dui-text-warning" rel="nofollow">
+      {% if item.type == 1 %}
+       <a target="_blank" href="{{helper.urlgen('case',item.id | string)}}" class="dui-text-warning" rel="nofollow">
+         {{item.introduce}} <span>【查看详情】</span>
+       </a>
+       {%else%}
+       <a target="_blank" href="{{helper.urlgen('article',item.id | string)}}" class="dui-text-warning" rel="nofollow">
         {{item.introduce}} <span>【查看详情】</span>
-      </a>
+       </a>
+       {% endif%}
     </p>
     <ul id="adviser-info-ul" class="adviser-info-ul clearfix" >
       {% for val in item.img_list %}
