--- a/views/so_article.html
+++ b/views/so_article.html
@@ -156,6 +156,7 @@
         font-size: 12px;
         color: #333;
         line-height: 24px;
+        height: 48px;
         text-align: justify;
     }
     .result-item .item-info .info-desc a{
