--- a/views/agreement.html
+++ b/views/agreement.html
@@ -58,76 +58,56 @@
 <div class="agreement">
   <h1><i></i>金吉列用户注册协议</h1>
   <div class="agreementcon" style="padding-bottom: 20px">
-<p style="margin-top: 17px">本协议是您与金吉列网站（简称"本站"，网址：www.jjl.cn）所有者（以下简称为"金吉列"）之间就金吉列网站服务等相关事宜所订立的契约，请您仔细阅读本注册协议，您点击"同意并继续"按钮后，本协议即构成对双方有约束力的法律文件。</p>
-  <h2>第1条 本站服务条款的确认和接纳</h2>
-<p>1.1本站的各项电子服务的所有权和运作权归金吉列所有。用户同意所有注册协议条款并完成注册程序，才能成为本站的正式用户。用户确认：本协议条款是处理双方权利义务的契约，始终有效，法律另有强制性规定或双方另有特别约定的，依其规定。</p>
-<p>1.2用户点击同意本协议的，即视为用户确认自己具有享受本站服务等相应的权利能力和行为能力，能够独立承担法律责任。</p>
-<p>1.3如果您在18周岁以下，您只能在父母或监护人的监护参与下才能使用本站。</p>
-<p>1.4金吉列保留在中华人民共和国大陆地区法施行之法律允许的范围内独自决定拒绝服务、关闭用户账户、清除或编辑内容的权利。</p>
+  <h2 style="">提示条款</h2>
+<p>欢迎您与金吉列出国留学咨询服务有限公司（下称“金吉列”）共同签署本《金吉列用户使用协议》（下称“本协议”）并使用金吉列网站服务！</p>
+<p>各服务条款前所列索引关键词仅为帮助您理解该条款表达的主旨之用，不影响或限制本协议条款的含义或解释。为维护您自身权益，建议您仔细阅读各条款具体表述</p>
+<p>【审慎阅读】您在申请使用流程中点击同意本协议之前，应当认真阅读本协议。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款、法律适用和争议解决条款。免除或者限制责任的条款将以粗体下划线标识，您应重点阅读。如您对协议有任何疑问，可向金吉列网站客服咨询</p>
+<p>【签约动作】当您按照使用页面提示填写信息、阅读并同意本协议，即表示您已充分阅读、理解并接受本协议的全部内容，并与“金吉列”达成一致，成为金吉列网站“用户”。阅读本协议的过程中，如果您不同意本协议或其中任何条款约定，您应立即停止使用本网站。</p>
 
 
 
-<h2>第2条 本站服务</h2>
-<p>2.1金吉列通过互联网依法为用户提供互联网信息等服务，用户在完全同意本协议及本站规定的情况下，方有权使用本站的相关服务。</p>
-<p>2.2用户必须自行准备如下设备和承担如下开支：（1）上网设备，包括并不限于电脑或者其他上网终端、调制解调器及其他必备的上网装置；（2）上网开支，包括并不限于网络接入费、上网设备租用费、手机流量费等。</p>
-  <h2>第3条 用户信息</h2>
-<p>3.1用户应自行诚信向本站提供注册资料，用户同意其提供的注册资料真实、准确、完整、合法有效，用户注册资料如有变动的，应及时更新其注册资料。如果用户提供的 注册资料不合法、不真实、不准确、不详尽的，用户需承担因此引起的相应责任及后果，并且金吉列保留终止用户使用金吉列各项服务的权利。</p>
-<p>
-  3.2用户在本站进行浏览等活动时，涉及用户真实姓名/名称、通信地址、联系电话、电子邮箱等隐私信息的，本站将予以严格保密，除非得到用户的授权或法律另有规定，本站不会向外界披露用户隐私信息。
+<h2>一、 定义</h2>
+<p>金吉列网站：指由“金吉列”提供互联网信息服务及相关信息、技术支持的网站网站（网址为www.jjl.cn）。</p>
+<p>金吉列网站服务：“金吉列”基于互联网，以包含金吉列网站网站在内的各种形态（包括未来技术发展出现的新的服务形态）向您提供的各项服务。
 </p>
-<p>3.3用户注册成功后，将产生用户名和密码等账户信息，您可以根据本站规定改变您的密码。用户应谨慎合理的保存、使用其用户名和密码。用户若发现任何非法使用用户账号或存在安全漏洞的情况，请立即通知本站并向公安机关报案。</p>
-<p>3.4用户不得将在本站注册获得的账户借给他人使用，否则用户应承担由此产生的全部责任，并与实际使用人承担连带责任。</p>
-<p>3.5用户同意，金吉列有权使用用户的注册信息、用户名、密码等信息，登录进入用户的注册账户，进行证据保全，包括但不限于公证、见证等。</p>
-<h2>第4条 用户依法言行义务本协议依据国家相关法律法规规章制定，用户同意严格遵守以下义务：</h2>
-<p>（1）不得传输或发表：煽动抗拒、破坏宪法和法律、行政法规实施的言论，煽动颠覆国家政权，推翻社会主义制度的言论，煽动分裂国家、破坏国家统一的的言论，煽动民族仇恨、民族歧视、破坏民族团结的言论；</p>
-<p>（2）从中国大陆向境外传输资料信息时必须符合中国有关法规；
+<p>金吉列网站规则：亦称“网站规则”，指任何时间（含本协议签订前）公示在“金吉列网站”等场所或金吉列单独发给您的，金吉列发布的任何规范性文件。</p>
+<p>金吉列的关联方：是指(i)被“金吉列”控制, (ii)控制“金吉列”, 或(iii)与“金吉列”一起受他人共同控制的任何个人、公司、商业企业、合伙企业、联合企业或其他商业实体等。</p>
+<p> 同一用户：使用同一身份认证信息或经“金吉列”排查认定多个金吉列账户的实际控制人为同一人的，均视为同一用户。</p>
+
+<h2>二、 协议范围</h2>
+<p>2.1 签约主体【平等主体】本协议由您与“金吉列”共同缔结，本协议对您与“金吉列”均具有合同效力。</p>
+<p>2.2 协议组成本协议由协议正文、附件及网站规则所组成。协议附件、网站规则与协议正文具有同等法律效力，如相关内容之间有不一致的，以生效在后的内容为准。您使用金吉列网站服务，即为您同意上述内容。
 </p>
-<p>（3）不得利用本站从事洗钱、窃取商业秘密、窃取个人信息等违法犯罪活动；
+
+<h2>三、 账户使用与使用</h2>
+<p>3.1 用户资格您确认，在您开始使用程序使用金吉列网站服务前，您应当具备中华人民共和国法律规定的与您行为相适应的民事行为能力。若您不具备前述与您行为相适应的民事行为能力，则您及您的监护人应依照法律规定承担因此而导致的一切后果。此外，您还需确保您不是任何国家、国际组织或者地域实施的贸易限制、制裁或其他法律、规则限制的对象，否则您可能无法正常使用及使用金吉列网站服务。</p>
+
+<p>3.2 账户说明</p>
+<p>【账户获得】当您按照使用页面提示填写信息、阅读并同意本协议且完成全部使用程序后，您可获得金吉列网站账户并成为金吉列网站用户。
 </p>
-<p>（4）不得干扰本站的正常运转，不得侵入本站及国家计算机信息系统；
+<p>如有证据证明或“金吉列”判断您存在不当使用 “金吉列”可采取冻结或关闭账户、拒绝提供服务等措施，如给“金吉列”及相关方造成损失的，您还应承担赔偿责任。</p>
+<P>【账户使用】您有权使用您设置或确认的金吉列会员名、昵称、性别、生日、个人介绍。</P>
+<p>由于您的金吉列账户关联您的个人信息及金吉列网站商业信息，您的金吉列账户仅限您本人使用。未经“金吉列”同意，您直接或间接授权第三方使用您金吉列账户或获取您账户项下信息的行为无效。如“金吉列”判断您金吉列账户的使用可能危及您的账户安全及/或金吉列网站信息安全等的，“金吉列”可拒绝提供相应服务或终止本协议。</p>
+<p>【账户转让】由于用户账户关联用户信用信息，仅当有法律明文规定、司法裁定或经金吉列同意，并符合金吉列网站规则规定的用户账户转让流程的情况下，您可进行账户的转让。您的账户一经转让，该账户项下权利义务一并转移。账户转移产生的一切责任均由您承担。</p>
+<p>3.3 使用信息管理</p>
+<p>3.3.1 真实合法</p>
+<p>【信息真实】在使用金吉列网站服务时，您应当按金吉列网站页面的提示准确完整地提供您的信息，以便“金吉列”或其他用户与您联系。您了解并同意，您有义务保持您提供信息的真实性及有效性。</p>
+<p>【会员名的合法性】您设置的金吉列会员名不得违反国家法律法规及网站规则关于会员名的管理规定，否则“金吉列”可回收您的金吉列会员名。金吉列会员名的回收不影响您以手机号码登录金吉列网站并使用金吉列网站服务。</p>
+<p>3.3.2 更新维护</p>
+<p>您应当及时更新您提供的信息，在法律有明确规定要求“金吉列”作为网站服务提供者必须对部分用户的信息进行核实的情况下，“金吉列”将依法不时地对您的信息进行检查核实，您应当配合提供最新、真实、完整、有效的信息。如“金吉列”按您最后一次提供的信息与您联系未果、您未按“金吉列”的要求及时提供信息、您提供的信息存在明显不实或行政司法机关核实您提供的信息无效等情况出现，您将承担因此对您自身、他人及“金吉列”造成的全部损失（含诉讼费用、律师费用）等责任。“金吉列”可向您发出询问或要求整改的通知，并要求您进行重新认证，直至中止、终止对您提供部分或全部金吉列网站服务，“金吉列”对此不承担责任。
 </p>
-<p>（5）不得传输或发表任何违法犯罪的、骚扰性的、中伤他人的、辱骂性的、恐吓性的、伤害性的、庸俗的，淫秽的、不文明的等信息资料；</p>
-<p>（6）不得传输或发表损害国家社会公共利益和涉及国家安全的信息资料或言论；
+<p>3.4 账户安全规范</p>
+<p>【账户安全保管义务】您的账户为您自行设置并由您保管，“金吉列”任何时候均不会主动要求您提供您的账户密码。因此，建议您务必保管好您的账户，并确保您在每个上网时段结束时退出登录并以正确步骤离开金吉列网站。账户因您主动泄露或因您遭受他人攻击、诈骗等行为导致的损失及后果，“金吉列”并不承担责任，您应通过司法、行政等救济途径向侵权行为人追偿。
 </p>
-<p>（7）不得教唆他人从事本条所禁止的行为；
-</p>
-<p>（8）不得利用在本站注册的账户进行牟利性经营活动；
-</p>
-<p>（9）不得发布任何侵犯他人著作权、商标权等知识产权或合法权利的内容；
-  用户应不时关注并遵守本站不时公布或修改的各类合法规则规定。
-  本站保有删除站内各类不符合法律政策或不真实的信息内容而无须通知用户的权利。
-  若用户未遵守以上规定的，本站有权作出独立判断并采取暂停或关闭用户帐号等措施。用户须对自己在网上的言论和行为承担法律责任。</p>
+<p>【账户行为责任自负】您应对您账户项下的所有行为结果（包括但不限于留言、回复及披露信息等）负责。</p>
+<p>【日常维护须知】如发现任何未经授权使用您账户登录金吉列网站或其他可能导致您账户遭窃、遗失的情况，建议您立即通知“金吉列”。您理解“金吉列”对您的任何请求采取行动均需要合理时间，且“金吉列”应您请求而采取的行动可能无法避免或阻止侵害后果的形成或扩大，您同意“金吉列”不为此承担任何责任。</p>
 
 
-<h2>第5条 所有权及知识产权条款</h2>
-<p>5.1用户一旦接受本协议，即表明该用户主动将其在任何时间段在本站发表的任何形式的信息内容（包括但不限于客户评价、客户咨询、各类话题文章等信息内容）的财产 性权利等任何可转让的权利，如著作权财产权（包括并不限于：复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、 翻译权、汇编权以及应当由著作权人享有的其他可转让权利），全部独家且不可撤销地转让给金吉列所有，用户同意金吉列有权就任何主体侵权而单独提起诉讼。</p>
-<p>5.2本协议已经构成《中华人民共和国著作权法》第二十五条（条文序号依照2011年版著作权法确定）及相关法律规定的著作财产权等权利转让书面协议，其效力及于用户在金吉列网站上发布的任何受著作权法保护的作品内容，无论该等内容形成于本协议订立前还是本协议订立后。</p>
-<p>5.3用户同意并已充分了解本协议的条款，承诺不将已发表于本站的信息，以任何形式发布或授权其它主体以任何方式使用（包括但不限于在各类网站、媒体上使用）。</p>
-<p>5.4金吉列是本站的制作者,拥有此网站内容及资源的著作权等合法权利,受国家法律保护,有权不时地对本协议及本站的内容进行修改，并在本站张贴，无须另行通知用户。在法律允许的最大限度范围内，金吉列对本协议及本站内容拥有解释权。</p>
-<p>5.5除法律另有强制性规定外，未经金吉列明确的特别书面许可,任何单位或个人不得以任何方式非法地全部或部分复制、转载、引用、链接、抓取或以其他方式使用本站的信息内容，否则，金吉列有权追究其法律责任。</p>
-<p>5.6本站所刊登的资料信息（诸如文字、图表、标识、按钮图标、图像、声音文件片段、数字下载、数据编辑和软件），均是金吉列或其内容提供者的财产，受中国和国际版权法的保护。本站上所有内容的汇编是金吉列的排他财产，受中国和国际版权法的保护。本站上所有软件都是金吉列或其关联公司或其软件供应商的财产，受中国和国际版权法的保护。</p>
-
-<h2>第6条 责任限制及不承诺担保</h2>
-  <p>除非另有明确的书面说明,本站及其所包含的或以其它方式通过本站提供给您的全部信息、内容、材料、产品（包括软件）和服务，均是在"按现状"和"按现有"的基础上提供的。除非另有明确的书面说明,金吉列不对本站的运营及其包含在本网站上的信息、内容、材料、产品（包括软件）或服务作任何形式的、明示或默示的声明或担保（根据中华人民共和国法律另有规定的以外）。
-    金吉列不担保本站所包含的或以其它方式通过本站提供给您的全部信息、内容、材料、产品（包括软件）和服务、其服务器或从本站发出的电子信件、信息没有病毒或其他有害成分。
-  如因不可抗力或其它本站无法控制的原因使本站系统崩溃或无法正常使用或丢失有关的信息、记录等，金吉列会合理地尽力协助处理善后事宜。</p>
-
-
-<h2>第7条 协议更新及用户关注义务</h2>
-<p>根据国家法律法规变化及网站运营需要，金吉列有权对本协议条款不时地进行修改，修改后的协议一旦被张贴在本站上即生效，并代替原来的协议。用户可随时登录查阅最新协议；用户有义务不时关注并阅读最新版的协议及网站公告。如用户不同意更新后的协议，可以且应立即停止接受金吉列网站依据本协议提供的服务；如用户继续使用本网站提供的服务的，即视为同意更新后的协议。金吉列建议您在使用本站之前阅读本协议及本站的公告。 如果本协议中任何一条被视为废止、无效或因任何理由不可执行，该条应视为可分的且并不影响任何其余条款的有效性和可执行性。</p>
+<h2>四、 金吉列网站服务及规范</h2>
+<p>4.1责任限制</p>
 
 
 
-<h2>第8条 法律管辖和适用</h2>
-<p>本协议的订立、执行和解释及争议的解决均应适用在中华人民共和国大陆地区适用之有效法律（但不包括其冲突法规则）。 如发生本协议与适用之法律相抵触时，则这些条款将完全按法律规定重新解释，而其它有效条款继续有效。 如缔约方就本协议内容或其执行发生任何争议，双方应尽力友好协商解决；协商不成时，任何一方均可向有管辖权的中华人民共和国大陆地区法院提起诉讼。</p>
-
-<h2>第9条 其他</h2>
-<p>9.1金吉列网站所有者是指在政府部门依法许可或备案的金吉列网站经营主体。
-</p>
-<p>9.2金吉列尊重用户和消费者的合法权利，本协议及本网站上发布的各类规则、声明等其他内容，均是为了更好的、更加便利的为用户和消费者提供服务。本站欢迎用户和社会各界提出意见和建议，金吉列将虚心接受并适时修改本协议及本站上的各类规则。</p>
-<p>9.3本协议内容中以黑体、加粗、下划线、斜体等方式显著标识的条款，请用户着重阅读。</p>
-<p>9.4您点击本协议下方的"同意并继续"按钮即视为您完全接受本协议，在点击之前请您再次确认已知悉并完全理解本协议的全部内容。
-</p>
   </div>
 </div>
 {% include "widget/new_footer/new_footer.html" %}
