--- a/views/center_case_detail.html
+++ b/views/center_case_detail.html
@@ -22,7 +22,7 @@
 <div class="dui-layout-lg clearfix dui-layout-padding" >
   <div class="dui-layout-silde ">
     <!-- =======顾问头像关注====== -->
-    <div style="margin-top: 20px;" >
+    <div>
       {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
       {{community_advisor.advisor(userinfo,helper,login_info)}}
     </div>
@@ -33,7 +33,7 @@
   <div class="dui-layout-div"></div>
   <div class="dui-layout-con" >
     <div class="dui-box-shadow" >
-      <div class="adviser-case-detail-con" >
+      <div class="adviser-case-detail-con" style="margin-top:0px">
         <div class="main-title gray-bg">
           <h3 style="font-size: 18px;">案例详情</h3>
           <div class="nav-phone">
