--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -37,8 +37,8 @@
 <body style="background: #f5f5f5;">
 {% include "widget/top/top.html" %}
 
-{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(tdk,helper) }}
+{% import "widget/new_nav_first/common_nav.html" as common_nav %}
+{{ common_nav.common_nav(tdk,helper) }}
 
 <div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
@@ -193,15 +193,14 @@
 </div>
 
 </div>
-{% include "widget/new_footer/new_footer.html" %}
+{% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_COOPERATION_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/footer.js" ></script>
-<script src="{{helper.cdnhost}}/assets/js/nav_ninth.js" ></script>
-<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 
