--- a/views/about/cultures.html
+++ b/views/about/cultures.html
@@ -53,8 +53,8 @@
 <body style="background: #f5f5f5">
 
 {% include "widget/top/top.html" %}
-{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(tdk,helper) }}
+{% import "widget/new_nav_first/common_nav.html" as common_nav %}
+{{ common_nav.common_nav(tdk,helper) }}
 <div class="agreement">
   <h1><i></i>公司简介</h1>
   <div class="agreementcon" style="padding-bottom: 20px">
@@ -75,8 +75,8 @@
   <p>大学长（北京）网络教育科技有限公司（简称大学长公司）是金吉列留学控股子公司，依托先进的互联网技术建立大学长网络智慧分享平台。通过金吉列留学在的行业的资源优势，应用先进的人工智能技术进行大数据汇集和用户画像分析，为用户提供“可信赖，全方位，高水准”的知识和智慧，以及“公平，透明，诚信，专业”的服务，使所有用户在大学长网络平台上享受到全方位、多品类的智能化智慧分享服务。</p>
   </div>
 </div>
-{% include "widget/new_footer/new_footer.html" %}
+{% include "widget/new_footer/common_footer.html" %}
 </body>
-<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 </html>
