--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -208,6 +208,7 @@
     });
     var geren = $('#gerenjieshao').data('geren');
     $('#gerenjieshao').html(geren);
+    $("#word-num").html(80-geren.length);
   });
   function baocunSubmit () {
     $.ajax({
