--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -180,6 +180,14 @@
       sP.attachEvent('onclick', sendphone_bin, false)
     }
 
+    //清除记录密码功能
+    window.load =function(){  　
+      document.getElementById('newEmail').value='';
+      document.getElementById('tupian_bin').value='';
+      document.getElementById('verify_binding').value='';
+      
+    };
+
   })
 
   function fangqis () {
