--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -310,6 +310,15 @@
         console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status)
       }
     });
+
+    //清除记录密码功能
+    window.load =function(){  　
+      document.getElementById('newEmail').value='';
+      document.getElementById('tupian_bin').value='';
+      document.getElementById('verify_forget').value='';
+      document.getElementById('password').value='';
+      document.getElementById('qie_password').value='';
+    };
   }
 
   function forgetS () {
