--- a/views/login/forgetUser.html
+++ b/views/login/forgetUser.html
@@ -500,6 +500,15 @@
       }
     })
 
+    //清除记录密码功能
+    window.load =function(){  　
+      document.getElementById('newEmail').value='';
+      document.getElementById('tupian_bin').value='';
+      document.getElementById('verify_forget').value='';
+      document.getElementById('password').value='';
+      document.getElementById('qie_password').value='';
+    };
+
   })
 
   function showcode () {
