--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -398,6 +398,15 @@
         var A = window.open(js_api_config.wwhost+"/qq_login?h=" + js_api_config.wwhost, "TencentLogin", "width=450,height=320,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
       }
     })
+
+    //清除记录密码功能
+    window.load =function(){  　
+      document.getElementById('newEmail_pass').value='';
+      document.getElementById('password').value='';
+      document.getElementById('newEmail').value='';
+      document.getElementById('tupian_user').value='';
+      document.getElementById('verify_user').value='';
+    };
   })
 
   function showcode () {
