--- a/views/login/register.html
+++ b/views/login/register.html
@@ -508,6 +508,13 @@
       }
     })
 
+    //清除记录密码功能
+    window.load =function(){  　
+      document.getElementById('reg_verify').value='';
+      document.getElementById('password').value='';
+      document.getElementById('newEmail').value='';
+      document.getElementById('tupian_user').value='';
+    };
   })
 
   function showcode () {
