--- a/views/login/register.html
+++ b/views/login/register.html
@@ -182,69 +182,7 @@
   </div>
 
   <div class="register_overseas clearfix" style="padding-top: 0px;">
-    {#<div class="register_content">
-      <div class="register_nei login_nei">
-        <div class="register_nei_title">用户注册<i>已经注册，现在 <a target="_blank"  href="{{helper.urlgen('login')}}">登录</a></i></div>
 
-        <div class="register_nei_content">
-          <form class="m-t register_nei_form" role="form">
-            <div class="form-group clearfix" style="position: relative;height: 28px">
-              <div class="title"><span>*&nbsp;</span>手&nbsp;机&nbsp;号&nbsp;：</div>
-              <input type="text" class="form-control" id="newEmail" required data-vaild="^1[3|4|5|7|8]\d{9}$" data-errmsg="手机号不正确" />
-              <div class="ti">请输入手机号</div>
-            </div>
-            <div class="form-group clearfix">
-              <div class="title"><span>*&nbsp;</span>验&nbsp;证&nbsp;码&nbsp;：</div>
-              <input  type="text" id="verify" class="form-control" style="width: 114px;display: inline-block;" required data-vaild="^\d{4}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
-              <div class="bind-button" style="width: 100px;float: left">
-                <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
-                <input type="button" class="btn btn-primary" style="width: 100px;text-align: center;padding: 6px 2px;background: #fff;color: #c6a770;border: 1px solid #c6a770;border-radius: 3px;line-height: 0px" id="sendcun" value="发送验证码"/>
-              </div>
-            </div>
-            <div class="form-group clearfix" style="position: relative;height: 28px;margin-top: 20px">
-              <div class="title"><span>*</span>设置密码：</div>
-              <input type="password" class="form-control" required="" data-vaild="^[a-zA-Z0-9]{8,16}$" id="password" data-errmsg="密码不正确，请输入8-16位数字或字母">
-              <div class="ti" style="margin-top: -5px">密码8-16位，数字、字母字符至少包含两种</div>
-            </div>
-            <div class="form-group clearfix" style="position: relative;height: 28px;margin-top: 20px">
-              <div class="title"><span>*</span>确认密码：</div>
-              <input type="password" class="form-control" required="" data-vaild="^[a-zA-Z0-9]{8,16}$" id="qie_password" data-errmsg="确认密码不正确，请输入8-16位数字或字母">
-              <div class="ti">请再次输入密码</div>
-            </div>
-
-            <div class="text-muted text-center clearfix" style="margin-top: -10px;margin-left: 80px">
-              <div class="form-group text-left clearfix" style="float: left">
-                <div class="checkbox i-checks">
-                  <label class="no-padding">
-                    <input type="checkbox" style="width: 50px;*filter: alpha(opacity = 1)"><i></i> 我接受并同意</label>
-                </div>
-              </div>
-              <a  href="javascript:void(0)" style="float: left;line-height: 36px" id="xieyi"><small>《用户服务条款》</small></a>
-            </div>
-
-            <input type="button" class="btn login-primary" id="loginSubmit" value="注 册" style="margin-left: 80px;margin-top: -15px"/>
-
-          </form>
-
-          <div class="fen clearfix" style="float: left;margin-left: 80px">
-            <h4>第三方快速登录：</h4>
-            <div class="bdsharebuttonbox" id="fx" style="float: left;margin-top: 7px">
-              <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo"/>
-
-              <a target="_blank"  href="{{helper.wwhost}}/weixin_login?h={{helper.wwhost}}" >
-                <img src="{{helper.cdnhost}}/assets/img/weixin_login.png" alt=""/>
-              </a>
-              <img src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq"/>
-            </div>
-          </div>
-
-        </div>
-        <!--<div class="register_r" id="XC_REGISTER_SEAT1"></div>
-        <div class="register_r">
-          <img src="{{helper.cdnhost}}/assets/img/r_reg.png" alt=""/>
-        </div>-->
-      </div>
-    </div>#}
     <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background.png);
     background-repeat: no-repeat;background-size: cover;background-position-x: -50px;">{# #}
       {# <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/> #}
@@ -260,13 +198,13 @@
           
           <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px">
             
-            <input type="text" style="border-radius: inherit;height: 30px;padding-left: 90px;" autocomplete="off" class="form-control" placeholder="请输入手机号" id="newEmail" required />
+            <input type="text" style="border-radius: inherit;height: 30px;padding-left: 90px;" autocomplete="off" value="" class="form-control" placeholder="请输入手机号" id="newEmail" required/>
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
             <i class="phone_q">+86</i>
             <span class="login_error" id="login_e_phone_u" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_u">请输入手机号</em></span>
           </div>
           <div class="form-group clearfix" style="height: 28px;margin-top: 20px;position: relative;margin-bottom: 0px;">
-            <input placeholder="填写图形验证码" type="text" autocomplete="off" id="tupian_user" class="form-control l_u_com_yan" required style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;"/><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <input placeholder="填写图形验证码" type="text" autocomplete="off" value="" id="tupian_user" class="form-control l_u_com_yan" required style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;"/><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
             <div class="l_u_com_bang" style="margin-right: 0px;height: 30px;line-heigth: 30px;margin-top: -7px;">
             <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
@@ -275,7 +213,7 @@
             </div>
           </div>
           <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
-            <input  type="text" id="reg_verify" class="form-control l_u_com_yan" autocomplete="off" placeholder="请输入手机验证码" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;" required /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <input  type="text" id="reg_verify" class="form-control l_u_com_yan" autocomplete="off" value="" placeholder="请输入手机验证码" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;" required /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
             <div class="l_u_com_bang" style="margin-right: 0px;height: 30px;line-heigth: 30px;margin-top: -7px;float: right;">
               <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
@@ -284,7 +222,7 @@
           </div>
           <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px;margin-top: 20px">
 
-            <input type="password" style="border-radius: inherit;height: 30px;" autocomplete="off" class="form-control" placeholder="请输入8-16位数字+字母组成" required="" id="password" >
+            <input type="password" style="border-radius: inherit;height: 30px;" autocomplete="off" value="" class="form-control" placeholder="请输入8-16位数字+字母组成" required id="password" >
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
             <span class="login_error" id="login_e_phone_p" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_p">请输入8-16位数字+字母组成</em></span>
           </div>
@@ -509,7 +447,8 @@
     })
 
     //清除记录密码功能
-    window.load =function(){  　
+    window.load =function(){
+        　
       document.getElementById('reg_verify').value='';
       document.getElementById('password').value='';
       document.getElementById('newEmail').value='';
